Initial Indexer configuration

--- a/indexer/.env.example
+++ b/indexer/.env.example
@@ -10,5 +10,9 @@ PONDER_RPC_URL_84532=https://base-sepolia.g.alchemy.com/v2/YOUR_ALCHEMY_KEY
 # TICKET_ENGINE_ADDRESS=0x18A7DB39F6FF7F64575E768d9dE0cB56D787ca29
 # PHENOMENON_START_BLOCK=37667749
 
-# Production: PostgreSQL (e.g. Railway)
+# Required for "ponder start" (and when using Postgres). Max 45 chars.
+DATABASE_SCHEMA=ponder
+
+# Optional: PostgreSQL (avoids "PGlite is closed" on dev reload; use for production too)
+# Local example: postgresql://postgres:postgres@127.0.0.1:5432/ponder
 # PONDER_DATABASE_URL=postgresql://...
