--- a/miniapp/package.json
+++ b/miniapp/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@farcaster/miniapp-sdk": "^0.2.2",
     "@farcaster/miniapp-wagmi-connector": "^1.1.1",
+    "@neynar/react": "^1.2.22",
+    "@pigment-css/react": "^0.0.30",
     "@tanstack/react-query": "^5.60.0",
     "next": "^15.0.0",
     "react": "^19.0.0",
